setter van speler klasse in commment